# webar

./: Cargo.toml  cabal.project
core/derive-rs/: Cargo.toml
core/hs/: webar-core.cabal
core/hs/src/Webar/: Blob.hs  Bytes.hs  Digest.hs  Fetch.hs  Http.hs  Object.hs  Time.hs  Types.hs  UUID.hs
core/hs/src/Webar/Blob/: Internal.hs
core/hs/src/Webar/Codec/: Cbor.hs
core/hs/src/Webar/Codec/Cbor/: Decoding.hs  Encoding.hs  TH.hs
core/hs/src/Webar/Codec/Cbor/Internal/: Decoding.hs  Encoding.hs
core/hs/src/Webar/Fetch/: Http.hs
core/hs/src/Webar/Fetch/Http/: Internal.hs
core/hs/tests/cbor/: Main.hs
core/hs/tests/core/: Main.hs
core/hs/tests/data/: Main.hs  cbor
core/rs/: Cargo.toml
core/rs/src/: blob.rs  digest.rs  fetch.rs  http.rs  lib.rs  object.rs  time.rs
core/rs/src/codec/: cbor.rs
core/rs/src/codec/cbor/internal/: decoding.rs  encoding.rs
core/rs/src/fetch/: http.rs
core/rs/src/http/: header.rs
core/rs/tests/cbor/: main.rs  product.rs  sum.rs
core/rs/tests/serde/: main.rs
core/test-json/: digest_sha256_empty.json  timestamp_0.json  timestamp_1980.json
data/: README.md
data/data-rs/: Cargo.toml
data/data-rs/src/: cbor.rs  json.rs  lib.rs  ser.rs
data/data-rs/tests/cbor/: data  main.rs
data/data-rs/tests/common/: mod.rs
data/data-rs/tests/json/: data  main.rs
data/derive-rs/: Cargo.toml
data/hs/: webar-data.cabal
data/hs/app/binjson/: Main.hs
data/hs/src/Webar/Data/: BinJson.hs  Cbor.hs  Json.hs  TH.hs
data/hs/src/Webar/Data/Cbor/: TH.hs
data/hs/src/Webar/Data/Internal/: TH.hs
data/hs/src/Webar/Data/Json/: TH.hs
data/hs/tests/cbor/: Main.hs
data/hs/tests/common/: Common.hs
data/hs/tests/json/: Main.hs
data/test-json/: escape_str.json  prod_normal_bound.json  prod_sample_max.json  prod_sort_0.json  prod_sort_1.json  prod_sort_nested_0.json  prod_sort_nested_1.json  prod_unsorted_0.json  prod_weird.json  unnormalized_str.json  uuid_1.json  var_mv_newt.json  var_mv_struct.json  var_mv_tup.json  var_mv_u2.json  var_mv_unit.json  var_nv.json  var_nv2.json  var_sus_record1.json  var_sus_record2.json  var_sus_tuple.json  var_sus_unary.json  var_sus_unit.json  var_sv2.json  var_tv1.json  (+3 more)
fetcher/traffic/: Cargo.toml
fetcher/traffic/src/: lib.rs
media/hs/: webar-media.cabal
media/hs/src/Webar/Image/: Source.hs
media/hs/src/Webar/Image/Fetcher/: Generic.hs
media/image/add-fetch/: Cargo.toml
media/image/add-fetch/src/: lib.rs
media/image/fetcher/: Cargo.toml
media/image/fetcher/src/: lib.rs
media/image/filter-source/: Cargo.toml
media/image/filter-source/src/: lib.rs
media/image/store-rs/: Cargo.toml
media/image/store-rs/src/: lib.rs
media/image/store-rs/src/blob/: index.rs
media/image/store-rs/src/object/: index.rs
script/: new-netns.sh
server/stackexchange/add-image/: Cargo.toml
server/stackexchange/add-image/src/: main.rs
server/stackexchange/core-rs/: Cargo.toml
server/stackexchange/core-rs/src/: api.rs  filter.rs  lib.rs  site.rs  source.rs
server/stackexchange/core-rs/src/api/: filter.rs  model.rs  request.rs
server/stackexchange/core-rs/src/fetcher/: api_client.rs  rest_client.rs
server/stackexchange/core-rs/src/image/: source.rs
server/stackexchange/core-rs/src/rest_api/: filter.rs  model.rs  source.rs
server/stackexchange/create-filter/: Cargo.toml
server/stackexchange/create-filter/src/: lib.rs
server/stackexchange/fetcher/: Cargo.toml
server/stackexchange/fetcher/examples/: se_sample.rs
server/stackexchange/fetcher/src/: client.rs  handler.rs  hs_filter.rs  lib.rs  sink.rs
server/stackexchange/filter-image-src/: Cargo.toml
server/stackexchange/filter-image-src/src/: main.rs
server/stackexchange/hs/: webar-stackexchange.cabal
server/stackexchange/hs/app/add-fetch/: Image.hs  Main.hs
server/stackexchange/hs/app/add-type-filter/: Main.hs
server/stackexchange/hs/app/filter-info/: Main.hs
server/stackexchange/hs/src/Webar/Server/StackExchange/: Filter.hs  Source.hs  Types.hs
server/stackexchange/hs/src/Webar/Server/StackExchange/Api/: Filter.hs  Model.hs  Object.hs  Request.hs  Source.hs  ToFilter.hs  Types.hs
server/stackexchange/hs/src/Webar/Server/StackExchange/Api/Filter/: Internal.hs
server/stackexchange/hs/src/Webar/Server/StackExchange/Api/Internal/: BlobData.hs
server/stackexchange/hs/src/Webar/Server/StackExchange/Fetcher/: ApiClient.hs  RestClient.hs
server/stackexchange/hs/src/Webar/Server/StackExchange/Image/: Source.hs
server/stackexchange/hs/src/Webar/Server/StackExchange/RestApi/: Filter.hs  Model.hs  Source.hs  Types.hs
server/stackexchange/hs/src/Webar/Server/StackExchange/RestApi/Filter/: Internal.hs
server/stackexchange/hs/src/Webar/Server/StackExchange/RestApi/Internal/: BlobData.hs  Version.hs
server/stackexchange/image-fetcher/: Cargo.toml
server/stackexchange/image-fetcher/src/: main.rs
server/wordpress/core-rs/: Cargo.toml
server/wordpress/core-rs/src/: lib.rs  source.rs
server/wordpress/core-rs/src/fetcher/: rest_client.rs
server/wordpress/core-rs/src/rest_api/: model.rs  source.rs
server/wordpress/fetcher-bin/: Cargo.toml
server/wordpress/fetcher-bin/examples/: wp-rest-sample.rs
server/wordpress/fetcher-bin/src/: lib.rs
server/wordpress/hs/: webar-wordpress.cabal
server/wordpress/hs/app/add-fetch/: Main.hs
server/wordpress/hs/src/Webar/Server/Wordpress/: Source.hs  Types.hs
server/wordpress/hs/src/Webar/Server/Wordpress/Fetcher/: RestClient.hs
server/wordpress/hs/src/Webar/Server/Wordpress/RestApi/: Model.hs  Source.hs  Types.hs
server/wordpress/hs/src/Webar/Server/Wordpress/RestApi/Internal/: BlobData.hs
store/hs/: webar-store.cabal
store/hs/src/Webar/Fetch/Http/: Store.hs
store/hs/src/Webar/Store/: FileSystem.hs
store/hs/src/Webar/Store/Blob/: Base.hs  WithShared.hs
store/hs/src/Webar/Store/Data/: Base.hs  WithShared.hs
store/hs/src/Webar/Store/File/: DedupStore.hs
store/hs/src/Webar/Store/Object/: Base.hs  Website.hs
store/rs/: Cargo.toml
store/rs/src/: blob.rs  lib.rs  object.rs  utils.rs
store/rs/src/fetch/: http.rs
util-rs/tracing/: Cargo.toml
(+20 files in other folders)
