[workspace]
resolver = "2"
members = ["./data/derive-rs", "./data/data-rs", "./core/rs"]


[workspace.package]
license = "AGPL-3.0-only"

[workspace.dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.116", features = [
  "arbitrary_precision",
  "preserve_order",
] }
ciborium = "0.2.2"
uuid = { version = "1.8.0", features = ["serde"] }
sha2 = "0.10.8"
phf = { version = "0.11.2", features = ["macros"] }
hex-literal = "0.4.1"
const-hex = "1.11.3"
# projects
webar-data = { path = "./data/data-rs" }
webar-core = { path = "./core/rs" }
