[workspace]
resolver = "2"
members = [
  "./data/derive-rs",
  "./data/data-rs",
  "./core/rs",
  "./store/rs",
  "./utils/rs/rustls",
  "./utils/rs/tracing",
  "fetcher/traffic",
  "./media/core-rs",
  "./media/image/store-rs",
  "./media/image/fetcher",
  "media/image/add-fetch",
  "media/image/filter-source",
  "./server/stackexchange/core-rs",
  "./server/stackexchange/create-filter",
  "./server/stackexchange/fetcher",
  "server/stackexchange/image-fetcher",
  "server/stackexchange/add-image-fetch",
  "server/stackexchange/filter-image-src",
]


[workspace.package]
license = "AGPL-3.0-only"

[workspace.dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.116", features = [
  "arbitrary_precision",
  "preserve_order",
] }
ciborium = "0.2.2"
rustix = { version = "0.38.34", features = ["fs"] }
uuid = { version = "1.8.0", features = ["serde"] }
reqwest = { version = "0.12.4", default-features = false, features = [
  "gzip",
  "json",
] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
sha2 = "0.10.8"
phf = { version = "0.11.2", features = ["macros"] }
hex-literal = "0.4.1"
const-hex = "1.11.3"
tracing = "0.1.40"
anyhow = "1.0.83"
thiserror = "1.0.61"
clap = { version = "4.5.11", features = ["derive"] }
tar = "0.4.40"

# projects
webar-data = { path = "./data/data-rs" }
webar-core = { path = "./core/rs" }
webar-tracing = { path = "./utils/rs/tracing" }
webar-rustls = { path = "./utils/rs/rustls" }
webar-store = { path = "./store/rs" }
webar-traffic-capture = { path = "./fetcher/traffic" }
webar-media-core = { path = "./media/core-rs" }
webar-image-store = { path = "./media/image/store-rs" }
webar-image-fetcher = { path = "./media/image/fetcher" }
webar-image-add-fetch = { path = "media/image/add-fetch" }
webar-image-filter-source = { path = "media/image/filter-source" }
webar-stackexchange-core = { path = "./server/stackexchange/core-rs" }
webar-stackexchange-fetcher = { path = "./server/stackexchange/fetcher" }
