cabal-version:      3.0
name:               webar-core
version:            0.1.0.0
license:            AGPL-3.0-only
license-file:       LICENSE
maintainer:         dariankline@outlook.com
author:             Jose Lane
build-type:         Simple
extra-source-files:
    tests/data/cbor/*.bin
    tests/data/json/*.json
    tests/cbor/data/*.bin
    tests/cbor/data/*.txt

library
    exposed-modules:
        Webar.Codec.Cbor
        Webar.Codec.Cbor.TH
        Webar.Digest
        Webar.Types
        Webar.Http
        Webar.Fetch
        Webar.Fetch.Http
        Webar.Fetch.Http.Internal
        Webar.Bytes
        Webar.Object
        Webar.Blob
        Webar.Time

    hs-source-dirs:     src
    other-modules:
        Webar.Blob.Internal
        Webar.Codec.Cbor.Internal.Encoding
        Webar.Codec.Cbor.Internal.Decoding

    default-language:   Haskell2010
    default-extensions: StrictData
    ghc-options:        -Wall
    build-depends:
        base >=4.17.2 && <4.19,
        text >=2.0.2 && <2.1,
        bytestring >=0.11.5 && <0.12,
        vector >=0.13.1 && <0.14,
        containers >=0.6.7 && <0.7,
        memory >=0.18.0 && <0.19,
        aeson >=2.2.1 && <2.3,
        cborg >=0.2.10 && <0.3,
        uuid-types >=1.0.5 && <1.1,
        cryptonite >=0.30 && <0.31,
        primitive >=0.9.0 && <0.10,
        template-haskell >=2.19.0 && <2.21,
        webar-data

test-suite data
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests/data
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        bytestring,
        hspec >=2.11 && <2.12,
        cryptonite,
        filepath >=1.4.2 && <1.6,
        webar-core,
        webar-data

test-suite cbor
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests/cbor
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        text >=2.0.2 && <2.1,
        bytestring >=0.11.5 && <0.12,
        vector >=0.13.1 && <0.14,
        containers >=0.6.7 && <0.7,
        uuid-types >=1.0.5 && <1.1,
        filepath >=1.4.2 && <1.6,
        hspec >=2.11 && <2.12,
        webar-core
