[package]
name = "webar-data"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium-io = "0.2.2"
ciborium-ll = "0.2.2"
serde.workspace = true
uuid.workspace = true
webar-derive = { path = "../derive-rs" }


[dev-dependencies]
ciborium.workspace = true
hex-literal.workspace = true
