[package]
name = "webar-traffic-capture"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustix = { workspace = true, features = ["runtime", "process"] }
anyhow.workspace = true

webar-core.workspace = true
