cabal-version: 3.0
name:          webar-media
version:       0.1.0.0
license:       AGPL-3.0-only
license-file:  LICENSE
maintainer:    dariankline@outlook.com
author:        Jose Lane
build-type:    Simple

library
    exposed-modules:
        Webar.Image.Source
        Webar.Image.Fetcher.Generic

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings StrictData
    ghc-options:        -Wall
    build-depends:
        base ^>=4.18.2.1,
        text >=2.0.2 && <2.1,
        vector >=0.13.1 && <0.14,
        uuid-types >=1.0.5 && <1.1,
        webar-data,
        webar-core

