cabal-version: 3.0
name:          webar-store
version:       0.1.0.0
license:       AGPL-3.0-only
license-file:  LICENSE
maintainer:    dariankline@outlook.com
author:        Jose Lane
build-type:    Simple

library
    exposed-modules:
        Webar.Store.FileSystem
        Webar.Store.File.DedupStore
        Webar.Fetch.Http.Store

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.2.1,
        bytestring >=0.11.5 && <0.12,
        os-string >=2.0.6 && <2.1,
        filepath >=1.5 && <1.6,
        directory >=1.3.8 && <1.4,
        unix >=2.8.4 && <2.9,
        webar-data,
        webar-core
