[package]
name = "webar-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
