[package]
name = "webar-image-store"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.32.1"
thiserror.workspace = true

webar-data.workspace = true
webar-core.workspace = true
webar-store.workspace = true
webar-media-core.workspace = true
