[package]
name = "webar-stackexchange-img-add-fetch"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true

webar-core.workspace = true
webar-stackexchange-core.workspace = true
webar-image-add-fetch.workspace = true
