[package]
name = "stackexchange-create-filter"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12.4", default-features = false, features = [
  "rustls-tls",
  "blocking",
  "gzip",
] }
anyhow.workspace = true
webar-data.workspace = true
webar-stackexchange-core.workspace = true
