cabal-version: 3.0
name:          webar-stackexchange
version:       0.1.0.0
license:       AGPL-3.0-only
license-file:  LICENSE
maintainer:    dariankline@outlook.com
author:        Jose Lane
build-type:    Simple

library
    exposed-modules:
        Webar.Server.StackExchange.Types
        Webar.Server.StackExchange.Api.Types
        Webar.Server.StackExchange.Api.Filter
        Webar.Server.StackExchange.Api.Request
        Webar.Server.StackExchange.Api.Model
        Webar.Server.StackExchange.Api.Source
        Webar.Server.StackExchange.Source
        Webar.Server.StackExchange.Fetcher.ApiClient

    hs-source-dirs:     src
    other-modules:      Webar.Server.StackExchange.Api.Filter.Internal
    default-language:   Haskell2010
    default-extensions: OverloadedStrings StrictData
    ghc-options:        -Wall
    build-depends:
        base >=4.17.2 && <4.19,
        text >=2.0.2 && <2.1,
        bytestring >=0.11.5 && <0.12,
        aeson >=2.2.1 && <2.3,
        uuid-types >=1.0.5 && <1.1,
        vector >=0.13.1 && <0.14,
        containers >=0.6.7 && <0.7,
        template-haskell >=2.19.0 && <2.21,
        webar-core,
        webar-data

executable se-filter-info
    main-is:          Main.hs
    hs-source-dirs:   app/filter-info
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        text,
        bytestring >=0.11.5 && <0.12,
        containers >=0.6.7 && <0.7,
        vector >=0.13.1 && <0.14,
        webar-data,
        webar-stackexchange

executable se-add-type-filter
    main-is:          Main.hs
    hs-source-dirs:   app/add-type-filter
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        text >=2.0.2 && <2.1,
        bytestring >=0.11.5 && <0.12,
        vector >=0.13.1 && <0.14,
        aeson >=2.2.1 && <2.3,
        filepath >=1.5 && <1.6,
        webar-data,
        webar-core,
        webar-store,
        webar-stackexchange

executable se-add-fetch
    main-is:          Main.hs
    hs-source-dirs:   app/add-fetch
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        text >=2.0.2 && <2.1,
        bytestring >=0.11.5 && <0.12,
        vector >=0.13.1 && <0.14,
        containers >=0.6.7 && <0.7,
        aeson >=2.2.1 && <2.3,
        conduit >=1.3.5 && <1.4,
        tar-conduit >=0.4.1 && <0.5,
        filepath >=1.5 && <1.6,
        webar-data,
        webar-core,
        webar-store,
        webar-stackexchange
