[package]
name = "webar-stackexchange-img-fetcher"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webar-core.workspace = true
webar-image-fetcher.workspace = true
webar-stackexchange-core.workspace = true
