[package]
name = "webar-wordpress-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
uuid.workspace = true
webar-data.workspace = true
webar-core.workspace = true
