[package]
name = "webar-wordpress-fetcher-bin"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v7"] }
tracing.workspace = true
rustix.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["http2", "rustls-tls-manual-roots"] }
anyhow.workspace = true
clap.workspace = true

webar-data.workspace = true
webar-core.workspace = true
webar-rustls.workspace = true
webar-tracing.workspace = true
webar-traffic-capture.workspace = true
webar-wordpress-core.workspace = true
webar-wordpress-fetcher.workspace = true
