cabal-version: 3.0
name:          webar-wordpress
version:       0.1.0.0
license:       AGPL-3.0-only
license-file:  LICENSE
maintainer:    dariankline@outlook.com
author:        Jose Lane
build-type:    Simple

library
    exposed-modules:
        Webar.Server.Wordpress.Types
        Webar.Server.Wordpress.RestApi.Model
        Webar.Server.Wordpress.RestApi.Types
        Webar.Server.Wordpress.RestApi.Internal.BlobData
        Webar.Server.Wordpress.RestApi.Source
        Webar.Server.Wordpress.Source
        Webar.Server.Wordpress.Fetcher.RestClient

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings StrictData
    ghc-options:        -Wall
    build-depends:
        base ^>=4.18.2.1,
        text >=2.0.2 && <2.1,
        time >=1.12.2 && <1.13,
        aeson >=2.2.1 && <2.3,
        vector >=0.13.1 && <0.14,
        containers >=0.6.7 && <0.7,
        webar-data,
        webar-core

executable wp-add-fetch
    main-is:          Main.hs
    hs-source-dirs:   app/add-fetch
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        text >=2.0.2 && <2.1,
        bytestring >=0.11.5 && <0.12,
        vector >=0.13.1 && <0.14,
        containers >=0.6.7 && <0.7,
        optparse-applicative >=0.18.1 && <0.19,
        aeson >=2.2.1 && <2.3,
        conduit >=1.3.5 && <1.4,
        tar-conduit >=0.4.1 && <0.5,
        filepath >=1.4 && <1.6,
        webar-data,
        webar-core,
        webar-store,
        webar-wordpress
